--- a/src/css/style.css
+++ b/src/css/style.css
@@ -52,7 +52,9 @@ input[type='checkbox'] + label:hover, input[type='checkbox']:focus + label{
 input[type='checkbox'] + label:hover > span, input[type='checkbox']:focus + label > span{
     background: rgba(255,255,255,.1);
 }
-input[type='checkbox']:checked + label > ins{ height: 100%; }
+input[type='checkbox']:checked + label{
+    color: #66BB6A;
+}
 
 input[type='checkbox']:checked + label > span{
     border: .5em solid #66BB6A; 
